@@ -1,8 +1,11 @@
+
+{This is the Title}
+
 %-600
 % -R7
 % -R95
 % -300
-% -b
+-b
 % $line=o
 % a / is 47 
 % $slur_depth=-6.0
@@ -28,7 +31,7 @@ x <!3mordent>
 x  %aa&%:bb&:
 x ":aa&:
 b
-e
+
 bQX
 1 3
 bL
@@ -50,8 +53,8 @@ b
 b
 1 c
 b
-e
 
+{another title}
 
 be
 0-a/
@@ -228,7 +231,7 @@ x x  X
 x y  Y
 x z  Z
 b
-e
+
 
 b
 0. e/e/e!/a
@@ -294,7 +297,7 @@ w c !/ c
 b
 2
 b
-e
+
 
 b
 2!
@@ -311,12 +314,12 @@ b
 b
 
 b
-2!
+2cdc
 b
-2!
+2cdc
 b
 
-e
+
 
 b
 2#d  ,dd
