@@ -1,4 +1,8 @@
 
+VERSION "4.3.106"
+changed the -pdf option to exec the gs command with options, including one to specify 
+letter paper size
+
 VERSION "4.3.105
 A correction for < used as a dash ornament submitted by Paul Overell
 a fix to allow changing the number of staff lines on one page submitted by Paul Overell
